# tool-forge

./: .gitignore  CLAUDE.md  COURSE_LOG.md  LLM_Project-Function-Calling-Post-Training.md  README.md  bfcl_eda.py  bfcl_model_output.py  pyproject.toml
bfcl_scores/: data_live.csv  data_multi_turn.csv  data_non_live.csv  data_overall.csv
docs/: experiment-log.md
eda/: bfcl_eda.py  bfcl_model_output.py  probe_template.ipynb  qlora_setup.ipynb  sft_smoke.ipynb  xlam.ipynb  xlam.py
runs/instruct/bfcl/scores/: data_agentic.csv  data_format_sensitivity.csv
scripts/: build_dataset.py  eval_bfcl.sh  generate_vllm.py  generate_vllm.sh  run_baseline.sh  run_baseline_auto.sh  serve_baseline.sh  setup_env.sh  setup_serve_env.sh  setup_train_env.sh  upload_artifact.py
src/tool_forge/: __init__.py  const.py  dataset.py  eval.py  format.py  gen_probe.py  merge.py  models.py  normalize.py  schema.py  split.py  train.py  verify.py
tests/: test_dataset.py  test_eval.py  test_format.py  test_keep_valid.py  test_models.py  test_normalize.py  test_split.py  test_verify.py
