[project]
name = "tool-forge"
version = "0.1.0"
description = "Post-train a small LLM for reliable multi-step tool use on a single 12 GB GPU."
readme = "README.md"
authors = [
    { name = "Shaun J", email = "shaunjullens@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = []

[project.scripts]
tool-forge = "tool_forge:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]                 # what to check
mypy_path = "src"               # first-party modules
explicit_package_bases = true   # src/ is base dir, package is `tool_forge`

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]