[project]
name = "tool-forge"
version = "0.1.0"
description = "Post-train a small LLM for reliable multi-step tool use on a single 12 GB GPU."
readme = "README.md"
authors = [
    { name = "Shaun J", email = "shaunjullens@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.20.1",
    "jsonschema>=4.26.0",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "wandb>=0.28.0",
]

[project.scripts]
tool-forge = "tool_forge:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]        # what to check
mypy_path = "src"               # first-party modules
explicit_package_bases = true   # src/ is base dir, package is `tool_forge`

# Edge ML libs ship no type stubs; don't let --strict choke on them.
[[tool.mypy.overrides]]
module = ["datasets.*", "wandb.*", "sklearn.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120
indent-width = 4
extend-exclude = ["eda"]   # exploratory notebooks are scratch, not shippable code

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

